--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^16.0.0
+  syncfusion_flutter_charts: ^30.1.40
+  intl: ^0.20.2
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
