--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   syncfusion_flutter_charts: ^30.1.40
   intl: ^0.20.2
   flutter_riverpod: ^2.6.1
+  http: ^1.4.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
