--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   logger: ^2.6.1
   flutter_launcher_icons: ^0.14.4
+  flutter_local_notifications: ^19.4.0
 
 dev_dependencies:
   flutter_test:
